--- a/modules/distribution/src/assembly/filter.properties
+++ b/modules/distribution/src/assembly/filter.properties
@@ -1,5 +1,5 @@
-product.name=WSO2 Streaming Integrator
+product.name=WSO2 Streaming Integrator Tooling
 product.version=1.0.0
 server.name=WSO2 Carbon Kernel
 server.version=5.2.7
-product.wum.name=wso2-streaming-integrator
+product.wum.name=wso2-streaming-integrator-tooling
