--- a/modules/tests/pom.xml
+++ b/modules/tests/pom.xml
@@ -26,7 +26,7 @@
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
-    <name>WSO2 Streaming Integrator - Tests</name>
+    <name>WSO2 Streaming Integrator Tooling- Tests</name>
     <artifactId>tests</artifactId>
     <packaging>pom</packaging>
 
