Change distribution name to wso2si-tooling

--- a/modules/distribution/pom.xml
+++ b/modules/distribution/pom.xml
@@ -1114,7 +1114,7 @@
                             <descriptors>
                                 <descriptor>${basedir}/src/assembly/bin.xml</descriptor>
                             </descriptors>
-                            <finalName>wso2-streaming-integrator-tooling-${project.version}</finalName>
+                            <finalName>wso2si-tooling-${project.version}</finalName>
                             <appendAssemblyId>false</appendAssemblyId>
                         </configuration>
                     </execution>
