Fix issue of Editor requiring Auth headers to call APIs

--- a/modules/distribution/carbon-home/conf/server/deployment.yaml
+++ b/modules/distribution/carbon-home/conf/server/deployment.yaml
@@ -361,3 +361,7 @@ auth.configs:
          role:
            id: 1
            displayName: admin
+  restAPIAuthConfigs:
+    exclude:
+      - /simulation/*
+      - /stores/*
