Rename Streaming Integrator to Streaming Integrator Tooling

--- a/modules/distribution/pom.xml
+++ b/modules/distribution/pom.xml
@@ -131,7 +131,7 @@
             <type>zip</type>
         </dependency>
 
-        <!-- Stream Processor related Features-->
+        <!-- Streaming Integrator Tooling related Features-->
         <dependency>
             <groupId>org.wso2.carbon.analytics</groupId>
             <artifactId>org.wso2.carbon.streaming.integrator.core.feature</artifactId>
@@ -730,7 +730,7 @@
                                     <version>${carbon.deployment.version}</version>
                                 </feature>
 
-                                <!-- Stream Processor Features -->
+                                <!-- Streaming Integrator Tooling Features -->
                                 <feature>
                                     <id>org.wso2.carbon.streaming.integrator.core.feature</id>
                                     <version>${carbon.analytics.version}</version>
