--- a/modules/samples/sample-clients/pom.xml
+++ b/modules/samples/sample-clients/pom.xml
@@ -25,7 +25,7 @@
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
-    <name>WSO2 Streaming Integrator - Sample Clients</name>
+    <name>WSO2 Streaming Integrator Tooling - Sample Clients</name>
     <artifactId>sample-clients</artifactId>
     <packaging>pom</packaging>
 
