--- a/modules/samples/sample-clients/prometheus-client/pom.xml
+++ b/modules/samples/sample-clients/prometheus-client/pom.xml
@@ -24,7 +24,7 @@
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
-    <name>WSO2 Streaming Integrator - Prometheus Source - Event Client</name>
+    <name>WSO2 Streaming Integrator Tooling - Prometheus Source - Event Client</name>
     <artifactId>prometheus-client</artifactId>
     <packaging>pom</packaging>
 
