--- a/modules/samples/sample-clients/websocket-receiver/pom.xml
+++ b/modules/samples/sample-clients/websocket-receiver/pom.xml
@@ -23,7 +23,7 @@
         <version>1.0.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-    <name>WSO2 Streaming Integrator - Sample - WebSocket Consumer</name>
+    <name>WSO2 Streaming Integrator Tooling - Sample - WebSocket Consumer</name>
     <build>
         <plugins>
             <plugin>
