--- a/modules/samples/sample-clients/wso2event-client/pom.xml
+++ b/modules/samples/sample-clients/wso2event-client/pom.xml
@@ -25,7 +25,7 @@
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
-    <name>WSO2 Streaming Integrator - Sample - WSO2Event Client</name>
+    <name>WSO2 Streaming Integrator Tooling - Sample - WSO2Event Client</name>
     <artifactId>wso2event-client</artifactId>
     <packaging>pom</packaging>
 
