--- a/pom.xml
+++ b/pom.xml
@@ -267,7 +267,7 @@
                 <type>zip</type>
             </dependency>
 
-            <!-- Stream Processor related-->
+            <!-- Streaming Integrator Tooling related-->
             <dependency>
                 <groupId>org.wso2.carbon.analytics</groupId>
                 <artifactId>org.wso2.carbon.streaming.integrator.core</artifactId>
@@ -892,7 +892,7 @@
         </pluginManagement>
     </build>
     <properties>
-        <carbon.analytics.version>3.0.2</carbon.analytics.version>
+        <carbon.analytics.version>3.0.3-SNAPSHOT</carbon.analytics.version>
         <siddhi.version>5.1.1</siddhi.version>
 
         <carbon.analytics-common.version>6.1.26</carbon.analytics-common.version>
@@ -972,7 +972,7 @@
         <maven.paxexam.plugin.version>1.2.4</maven.paxexam.plugin.version>
         <mockito.version>1.9.0</mockito.version>
 
-        <!-- Stream Processor Dependencies -->
+        <!-- Streaming Integrator Tooling Dependencies -->
         <disruptor.version>3.4.2.wso2v1</disruptor.version>
         <guava.version>23.0</guava.version>
         <guava.bundle.version>23.0.0</guava.bundle.version>
