--- a/pom.xml
+++ b/pom.xml
@@ -892,7 +892,7 @@
         </pluginManagement>
     </build>
     <properties>
-        <carbon.analytics.version>3.0.3-SNAPSHOT</carbon.analytics.version>
+        <carbon.analytics.version>3.0.4</carbon.analytics.version>
         <siddhi.version>5.1.1</siddhi.version>
 
         <carbon.analytics-common.version>6.1.26</carbon.analytics-common.version>
