--- a/modules/samples/sample-clients/tcp-server/src/main/resources/log4j.properties
+++ b/modules/samples/sample-clients/tcp-server/src/main/resources/log4j.properties
@@ -16,7 +16,7 @@
 # under the License.
 #
 # For the general syntax of property based configuration files see the
-# documenation of org.apache.log4j.PropertyConfigurator.
+# documentation of org.apache.log4j.PropertyConfigurator.
 # The root category uses the appender called A1. Since no priority is
 # specified, the root category assumes the default priority for root
 # which is DEBUG in log4j. The root category is the only category that
