--- a/modules/samples/sample-clients/kafka-consumer/pom.xml
+++ b/modules/samples/sample-clients/kafka-consumer/pom.xml
@@ -47,7 +47,7 @@
             <artifactId>siddhi-core</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.wso2.extension.siddhi.io.kafka</groupId>
+            <groupId>io.siddhi.extension.io.kafka</groupId>
             <artifactId>siddhi-io-kafka</artifactId>
         </dependency>
         <dependency>
