--- a/modules/samples/sample-clients/mqtt-client/pom.xml
+++ b/modules/samples/sample-clients/mqtt-client/pom.xml
@@ -48,7 +48,7 @@
             <artifactId>siddhi-core</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.wso2.extension.siddhi.io.mqtt</groupId>
+            <groupId>io.siddhi.extension.io.mqtt</groupId>
             <artifactId>siddhi-io-mqtt</artifactId>
         </dependency>
 
