--- a/pom.xml
+++ b/pom.xml
@@ -28,7 +28,7 @@
     <groupId>org.wso2.ei</groupId>
     <artifactId>wso2-streaming-integrator-tooling-parent</artifactId>
     <packaging>pom</packaging>
-    <version>1.0.1-SNAPSHOT</version>
+    <version>1.0.1</version>
     <name>WSO2 Streaming Integrator Tooling - Parent</name>
 
     <url>http://wso2.org</url>
@@ -1068,6 +1068,7 @@
 
         <siddhi.store.mongodb.version>2.0.2</siddhi.store.mongodb.version>
         <siddhi.store.rdbms.version>6.0.4</siddhi.store.rdbms.version>
+        <siddhi.store.solr.version>2.0.0</siddhi.store.solr.version>
         <siddhi.store.hbase.version>5.0.0</siddhi.store.hbase.version>
         <siddhi.store.cassandra.version>2.0.0</siddhi.store.cassandra.version>
         <siddhi.store.redis.version>3.1.1</siddhi.store.redis.version>
