--- a/pom.xml
+++ b/pom.xml
@@ -910,7 +910,7 @@
         </pluginManagement>
     </build>
     <properties>
-        <carbon.analytics.version>3.0.32-SNAPSHOT</carbon.analytics.version>
+        <carbon.analytics.version>3.0.32</carbon.analytics.version>
         <siddhi.version>5.1.12</siddhi.version>
 
         <carbon.analytics-common.version>6.1.45</carbon.analytics-common.version>
