--- a/pom.xml
+++ b/pom.xml
@@ -1061,8 +1061,8 @@
         <siddhi.io.hl7.version>3.0.0</siddhi.io.hl7.version>
         <siddhi.io.snmp.version>2.0.0</siddhi.io.snmp.version>
         <siddhi.io.grpc.version>1.0.3</siddhi.io.grpc.version>
-        <siddhi.io.gcs.version>1.0.0</siddhi.io.gcs.version>
-        <siddhi.io.s3.version>1.0.1</siddhi.io.s3.version>
+        <siddhi.io.gcs.version>1.0.1</siddhi.io.gcs.version>
+        <siddhi.io.s3.version>1.0.3</siddhi.io.s3.version>
 
         <siddhi.map.json.version>5.0.4</siddhi.map.json.version>
         <siddhi.map.avro.version>2.0.5</siddhi.map.avro.version>
@@ -1073,6 +1073,7 @@
         <siddhi.map.csv.version>2.0.3</siddhi.map.csv.version>
 
         <siddhi.store.mongodb.version>2.0.2</siddhi.store.mongodb.version>
+        <siddhi.store.solr.version>2.0.0</siddhi.store.solr.version>
         <siddhi.store.rdbms.version>6.0.4</siddhi.store.rdbms.version>
         <siddhi.store.hbase.version>5.0.0</siddhi.store.hbase.version>
         <siddhi.store.cassandra.version>2.0.0</siddhi.store.cassandra.version>
