--- a/modules/distribution/src/assembly/filter.properties
+++ b/modules/distribution/src/assembly/filter.properties
@@ -2,4 +2,4 @@ product.name=WSO2 Streaming Integrator Tooling
 product.version=1.1.0
 server.name=WSO2 Carbon Kernel
 server.version=5.2.13
-product.wum.name=wso2-streaming-integrator-tooling
+product.wum.name=wso2si-tooling
