--- a/modules/samples/sample-clients/kafka-consumer/build.xml
+++ b/modules/samples/sample-clients/kafka-consumer/build.xml
@@ -56,6 +56,7 @@
             <include name="commons-pool_*.jar"/>
             <include name="org.apache.ws.commons.axiom.axiom-api_*.jar"/>
             <include name="jaxen_*.jar"/>
+            <include name="org.wso2.carbon.si.metrics.core_*.jar"/>
         </fileset>
     </path>
 
