Add dependency jar to sample clients

--- a/modules/samples/sample-clients/http-client/build.xml
+++ b/modules/samples/sample-clients/http-client/build.xml
@@ -57,6 +57,7 @@
             <include name="io.netty.*.jar"/>
             <include name="commons-pool_*.jar"/>
             <include name="org.wso2.transport.http.netty_*.jar"/>
+            <include name="org.wso2.carbon.si.metrics.core_*.jar"/>
         </fileset>
     </path>
 
