--- a/modules/samples/sample-clients/websocket-producer/pom.xml
+++ b/modules/samples/sample-clients/websocket-producer/pom.xml
@@ -20,7 +20,7 @@
     <parent>
         <artifactId>sample-clients</artifactId>
         <groupId>org.wso2.ei</groupId>
-        <version>4.0.1-SNAPSHOT</version>
+        <version>4.0.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <name>WSO2 Streaming Integrator Tooling - Sample - WebSocket Client</name>
