--- a/pom.xml
+++ b/pom.xml
@@ -905,10 +905,10 @@
         </pluginManagement>
     </build>
     <properties>
-        <carbon.analytics.version>3.0.56</carbon.analytics.version>
-        <siddhi.version>5.1.20</siddhi.version>
+        <carbon.analytics.version>3.0.57-SNAPSHOT</carbon.analytics.version>
+        <siddhi.version>5.1.21</siddhi.version>
 
-        <carbon.analytics-common.version>6.1.55</carbon.analytics-common.version>
+        <carbon.analytics-common.version>6.1.56-SNAPSHOT</carbon.analytics-common.version>
         <!-- Maven plugins -->
         <!--Bundle Plugin - Overridden from parent due to a bug in latest version related to capability providers-->
         <maven.bundle.plugin.version>2.5.4</maven.bundle.plugin.version>
@@ -930,7 +930,7 @@
 
         <!-- Dependencies -->
         <open.tracing.version>0.31.0</open.tracing.version>
-        <carbon.kernel.version>5.2.13</carbon.kernel.version>
+        <carbon.kernel.version>5.2.16</carbon.kernel.version>
         <carbon.kernel.package.import.version.range>[5.2.0, 6.0.0)</carbon.kernel.package.import.version.range>
         <carbon.kernel.pax.version>5.2.13</carbon.kernel.pax.version>
 
@@ -942,12 +942,12 @@
 
         <carbon.cache.version>1.1.3</carbon.cache.version>
         <carbon.touchpoint.version>1.1.1</carbon.touchpoint.version>
-        <carbon.utils.version>2.0.8</carbon.utils.version>
+        <carbon.utils.version>2.1.1-SNAPSHOT</carbon.utils.version>
         <carbon.config.version>2.1.16</carbon.config.version>
         <carbon.config.version.range>[2.1.0, 3.0.0)</carbon.config.version.range>
         <carbon.securevault.version>5.0.13</carbon.securevault.version>
 
-        <slf4j.version>1.7.5</slf4j.version>
+        <slf4j.version>1.7.35</slf4j.version>
         <slf4j.logging.package.import.version.range>[1.7.1, 2.0.0)
         </slf4j.logging.package.import.version.range>
 
@@ -998,11 +998,11 @@
         <common.collections4.version>4.0</common.collections4.version>
 
         <!--MSF4J related-->
-        <msf4j.version>2.8.3</msf4j.version>
+        <msf4j.version>2.8.4-SNAPSHOT</msf4j.version>
         <com.fasterxml.jackson.core.version>2.8.9</com.fasterxml.jackson.core.version>
         <io.swagger.version>1.5.22</io.swagger.version>
         <javax.ws.rs-api.version>2.0</javax.ws.rs-api.version>
-        <pax.logging.api.version>1.8.5</pax.logging.api.version>
+        <pax.logging.api.version>2.1.0</pax.logging.api.version>
         <javax.servlet.version>3.1.0</javax.servlet.version>
 
         <!--Event simulator-->
@@ -1021,54 +1021,53 @@
         <!--Siddhi Extension Versions-->
         <siddhi.execution.math.version>5.0.5</siddhi.execution.math.version>
         <siddhi.execution.unitconversion.version>2.0.2</siddhi.execution.unitconversion.version>
-        <siddhi.execution.regex.version>5.0.6</siddhi.execution.regex.version>
-        <siddhi.execution.streamingml.version>2.0.4</siddhi.execution.streamingml.version>
-        <siddhi.execution.string.version>5.0.11</siddhi.execution.string.version>
-        <siddhi.execution.time.version>5.0.7</siddhi.execution.time.version>
+        <siddhi.execution.regex.version>5.0.7-SNAPSHOT</siddhi.execution.regex.version>
+        <siddhi.execution.streamingml.version>2.0.5-SNAPSHOT</siddhi.execution.streamingml.version>
+        <siddhi.execution.string.version>5.0.12-SNAPSHOT</siddhi.execution.string.version>
+        <siddhi.execution.time.version>5.0.8-SNAPSHOT</siddhi.execution.time.version>
         <siddhi.execution.unique.version>5.0.5</siddhi.execution.unique.version>
 
-        <siddhi.execution.geo.version>5.0.1</siddhi.execution.geo.version>
-        <siddhi.execution.map.version>5.0.6</siddhi.execution.map.version>
+        <siddhi.execution.map.version>5.0.7-SNAPSHOT</siddhi.execution.map.version>
         <siddhi.execution.env.version>2.0.0</siddhi.execution.env.version>
-        <siddhi.execution.json.version>2.0.9</siddhi.execution.json.version>
+        <siddhi.execution.json.version>2.0.10-SNAPSHOT</siddhi.execution.json.version>
         <siddhi.execution.list.version>1.0.1</siddhi.execution.list.version>
 
-        <siddhi.io.file.version>2.0.17</siddhi.io.file.version>
-        <siddhi.io.tcp.version>3.0.5</siddhi.io.tcp.version>
-        <siddhi.io.jms.version>2.0.4</siddhi.io.jms.version>
-        <siddhi.io.email.version>2.0.6</siddhi.io.email.version>
-        <siddhi.io.rabbitmq.version>3.0.6</siddhi.io.rabbitmq.version>
-        <siddhi.io.mqtt.version>3.0.1</siddhi.io.mqtt.version>
-        <siddhi.io.kafka.version>5.0.13</siddhi.io.kafka.version>
-        <siddhi.io.http.version>2.3.3</siddhi.io.http.version>
-        <siddhi.io.sqs.version>3.0.0</siddhi.io.sqs.version>
+        <siddhi.io.file.version>2.0.18-SNAPSHOT</siddhi.io.file.version>
+        <siddhi.io.tcp.version>3.0.6-SNAPSHOT</siddhi.io.tcp.version>
+        <siddhi.io.jms.version>2.0.5-SNAPSHOT</siddhi.io.jms.version>
+        <siddhi.io.email.version>2.0.7-SNAPSHOT</siddhi.io.email.version>
+        <siddhi.io.rabbitmq.version>3.0.7-SNAPSHOT</siddhi.io.rabbitmq.version>
+        <siddhi.io.mqtt.version>3.0.2-SNAPSHOT</siddhi.io.mqtt.version>
+        <siddhi.io.kafka.version>5.0.14-SNAPSHOT</siddhi.io.kafka.version>
+        <siddhi.io.http.version>2.3.4-SNAPSHOT</siddhi.io.http.version>
+        <siddhi.io.sqs.version>3.0.1-SNAPSHOT</siddhi.io.sqs.version>
         <siddhi.io.websocket.version>3.0.2</siddhi.io.websocket.version>
         <!--<siddhi.io.ibmmq.version>2.0.0</siddhi.io.ibmmq.version>-->
-        <siddhi.io.cdc.version>2.0.11</siddhi.io.cdc.version>
-        <siddhi.io.prometheus.version>2.1.2</siddhi.io.prometheus.version>
-        <siddhi.io.nats.version>2.0.11</siddhi.io.nats.version>
-        <siddhi.io.googlepubsub.version>2.0.2</siddhi.io.googlepubsub.version>
-        <siddhi.io.hl7.version>3.0.0</siddhi.io.hl7.version>
-        <siddhi.io.snmp.version>2.0.0</siddhi.io.snmp.version>
-        <siddhi.io.grpc.version>1.0.9</siddhi.io.grpc.version>
-        <siddhi.io.gcs.version>1.0.1</siddhi.io.gcs.version>
-        <siddhi.io.s3.version>1.0.3</siddhi.io.s3.version>
+        <siddhi.io.cdc.version>2.0.12-SNAPSHOT</siddhi.io.cdc.version>
+        <siddhi.io.prometheus.version>2.1.3-SNAPSHOT</siddhi.io.prometheus.version>
+        <siddhi.io.nats.version>2.0.13-SNAPSHOT</siddhi.io.nats.version>
+        <siddhi.io.googlepubsub.version>2.0.3-SNAPSHOT</siddhi.io.googlepubsub.version>
+        <siddhi.io.hl7.version>3.0.1-SNAPSHOT</siddhi.io.hl7.version>
+        <siddhi.io.snmp.version>2.0.1-SNAPSHOT</siddhi.io.snmp.version>
+        <siddhi.io.grpc.version>1.0.10-SNAPSHOT</siddhi.io.grpc.version>
+        <siddhi.io.gcs.version>1.0.2-SNAPSHOT</siddhi.io.gcs.version>
+        <siddhi.io.s3.version>1.0.4-SNAPSHOT</siddhi.io.s3.version>
 
-        <siddhi.map.json.version>5.2.1</siddhi.map.json.version>
-        <siddhi.map.avro.version>2.1.0</siddhi.map.avro.version>
-        <siddhi.map.binary.version>2.1.0</siddhi.map.binary.version>
-        <siddhi.map.text.version>2.1.0</siddhi.map.text.version>
-        <siddhi.map.xml.version>5.2.1</siddhi.map.xml.version>
-        <siddhi.map.keyvalue.version>2.1.1</siddhi.map.keyvalue.version>
-        <siddhi.map.csv.version>2.1.0</siddhi.map.csv.version>
+        <siddhi.map.json.version>5.2.2-SNAPSHOT</siddhi.map.json.version>
+        <siddhi.map.avro.version>2.2.1-SNAPSHOT</siddhi.map.avro.version>
+        <siddhi.map.binary.version>2.1.1-SNAPSHOT</siddhi.map.binary.version>
+        <siddhi.map.text.version>2.1.1-SNAPSHOT</siddhi.map.text.version>
+        <siddhi.map.xml.version>5.2.2-SNAPSHOT</siddhi.map.xml.version>
+        <siddhi.map.keyvalue.version>2.1.2-SNAPSHOT</siddhi.map.keyvalue.version>
+        <siddhi.map.csv.version>2.1.1-SNAPSHOT</siddhi.map.csv.version>
 
         <siddhi.store.mongodb.version>2.1.2</siddhi.store.mongodb.version>
         <siddhi.store.solr.version>2.0.0</siddhi.store.solr.version>
-        <siddhi.store.rdbms.version>7.0.12</siddhi.store.rdbms.version>
+        <siddhi.store.rdbms.version>7.0.13-SNAPSHOT</siddhi.store.rdbms.version>
         <siddhi.store.hbase.version>5.0.0</siddhi.store.hbase.version>
-        <siddhi.store.cassandra.version>2.0.0</siddhi.store.cassandra.version>
-        <siddhi.store.redis.version>3.1.1</siddhi.store.redis.version>
-        <siddhi.store.elasticsearch.version>3.2.0</siddhi.store.elasticsearch.version>
+        <siddhi.store.cassandra.version>2.0.1-SNAPSHOT</siddhi.store.cassandra.version>
+        <siddhi.store.redis.version>3.1.2-SNAPSHOT</siddhi.store.redis.version>
+        <siddhi.store.elasticsearch.version>3.2.1-SNAPSHOT</siddhi.store.elasticsearch.version>
 
         <siddhi.script.js.version>5.0.4</siddhi.script.js.version>
 
@@ -1085,7 +1084,7 @@
         <mysql.con.version>6.0.5</mysql.con.version>
         <googlecode.json-simple.version>1.1.wso2v1</googlecode.json-simple.version>
         <io.netty.version>4.1.34.Final</io.netty.version>
-        <log4j.version>1.2.17</log4j.version>
+        <log4j.version>2.17.1</log4j.version>
         <commons-codec.wso2.version>1.3.0.wso2v1</commons-codec.wso2.version>
 
         <!--Performance Testing Versions-->
@@ -1094,7 +1093,7 @@
         <wso2.log4j.version>1.2.17.wso2v1</wso2.log4j.version>
 
         <!-- Forget me tool -->
-        <forgetme.tool.version>1.1.21</forgetme.tool.version>
+        <forgetme.tool.version>1.3.6</forgetme.tool.version>
 
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
