--- a/pom.xml
+++ b/pom.xml
@@ -215,9 +215,27 @@
                 <version>${slf4j.version}</version>
             </dependency>
             <dependency>
-                <groupId>org.apache.log4j.wso2</groupId>
-                <artifactId>log4j</artifactId>
-                <version>${wso2.log4j.version}</version>
+                <groupId>org.apache.logging.log4j</groupId>
+                <artifactId>log4j-core</artifactId>
+                <version>${log4j.version}</version>
+                <exclusions>
+                    <exclusion>
+                        <groupId>javax.mail</groupId>
+                        <artifactId>mail</artifactId>
+                    </exclusion>
+                    <exclusion>
+                        <groupId>javax.jms</groupId>
+                        <artifactId>jms</artifactId>
+                    </exclusion>
+                    <exclusion>
+                        <groupId>com.sun.jdmk</groupId>
+                        <artifactId>jmxtools</artifactId>
+                    </exclusion>
+                    <exclusion>
+                        <groupId>com.sun.jmx</groupId>
+                        <artifactId>jmxri</artifactId>
+                    </exclusion>
+                </exclusions>
             </dependency>
 
             <!-- JSON dependencies -->
@@ -905,10 +923,10 @@
         </pluginManagement>
     </build>
     <properties>
-        <carbon.analytics.version>3.0.56</carbon.analytics.version>
-        <siddhi.version>5.1.20</siddhi.version>
+        <carbon.analytics.version>3.0.57</carbon.analytics.version>
+        <siddhi.version>5.1.21</siddhi.version>
 
-        <carbon.analytics-common.version>6.1.55</carbon.analytics-common.version>
+        <carbon.analytics-common.version>6.1.57</carbon.analytics-common.version>
         <!-- Maven plugins -->
         <!--Bundle Plugin - Overridden from parent due to a bug in latest version related to capability providers-->
         <maven.bundle.plugin.version>2.5.4</maven.bundle.plugin.version>
@@ -930,24 +948,24 @@
 
         <!-- Dependencies -->
         <open.tracing.version>0.31.0</open.tracing.version>
-        <carbon.kernel.version>5.2.13</carbon.kernel.version>
+        <carbon.kernel.version>5.2.16</carbon.kernel.version>
         <carbon.kernel.package.import.version.range>[5.2.0, 6.0.0)</carbon.kernel.package.import.version.range>
-        <carbon.kernel.pax.version>5.2.13</carbon.kernel.pax.version>
+        <carbon.kernel.pax.version>5.2.16</carbon.kernel.pax.version>
 
-        <carbon.deployment.version>5.2.1</carbon.deployment.version>
+        <carbon.deployment.version>5.2.2</carbon.deployment.version>
 
-        <carbon.datasources.version>1.1.9</carbon.datasources.version>
+        <carbon.datasources.version>1.1.10</carbon.datasources.version>
         <carbon.metrics.version>2.3.13</carbon.metrics.version>
         <carbon.jndi.version>1.0.5</carbon.jndi.version>
 
         <carbon.cache.version>1.1.3</carbon.cache.version>
         <carbon.touchpoint.version>1.1.1</carbon.touchpoint.version>
-        <carbon.utils.version>2.0.8</carbon.utils.version>
+        <carbon.utils.version>2.1.1</carbon.utils.version>
         <carbon.config.version>2.1.16</carbon.config.version>
         <carbon.config.version.range>[2.1.0, 3.0.0)</carbon.config.version.range>
-        <carbon.securevault.version>5.0.13</carbon.securevault.version>
+        <carbon.securevault.version>5.0.16</carbon.securevault.version>
 
-        <slf4j.version>1.7.5</slf4j.version>
+        <slf4j.version>1.7.12</slf4j.version>
         <slf4j.logging.package.import.version.range>[1.7.1, 2.0.0)
         </slf4j.logging.package.import.version.range>
 
@@ -998,11 +1016,11 @@
         <common.collections4.version>4.0</common.collections4.version>
 
         <!--MSF4J related-->
-        <msf4j.version>2.8.3</msf4j.version>
+        <msf4j.version>2.8.4</msf4j.version>
         <com.fasterxml.jackson.core.version>2.8.9</com.fasterxml.jackson.core.version>
         <io.swagger.version>1.5.22</io.swagger.version>
         <javax.ws.rs-api.version>2.0</javax.ws.rs-api.version>
-        <pax.logging.api.version>1.8.5</pax.logging.api.version>
+        <pax.logging.api.version>2.1.0</pax.logging.api.version>
         <javax.servlet.version>3.1.0</javax.servlet.version>
 
         <!--Event simulator-->
@@ -1020,47 +1038,45 @@
 
         <!--Siddhi Extension Versions-->
         <siddhi.execution.math.version>5.0.5</siddhi.execution.math.version>
-        <siddhi.execution.unitconversion.version>2.0.2</siddhi.execution.unitconversion.version>
-        <siddhi.execution.regex.version>5.0.6</siddhi.execution.regex.version>
-        <siddhi.execution.streamingml.version>2.0.4</siddhi.execution.streamingml.version>
-        <siddhi.execution.string.version>5.0.11</siddhi.execution.string.version>
-        <siddhi.execution.time.version>5.0.7</siddhi.execution.time.version>
-        <siddhi.execution.unique.version>5.0.5</siddhi.execution.unique.version>
-
+        <siddhi.execution.regex.version>5.0.7</siddhi.execution.regex.version>
+        <siddhi.execution.string.version>5.0.12</siddhi.execution.string.version>
+        <siddhi.execution.time.version>5.0.8</siddhi.execution.time.version>
         <siddhi.execution.geo.version>5.0.1</siddhi.execution.geo.version>
-        <siddhi.execution.map.version>5.0.6</siddhi.execution.map.version>
-        <siddhi.execution.env.version>2.0.0</siddhi.execution.env.version>
-        <siddhi.execution.json.version>2.0.9</siddhi.execution.json.version>
+        <siddhi.execution.json.version>2.0.10</siddhi.execution.json.version>
+        <siddhi.execution.map.version>5.0.7</siddhi.execution.map.version>
         <siddhi.execution.list.version>1.0.1</siddhi.execution.list.version>
+        <siddhi.execution.unitconversion.version>2.0.2</siddhi.execution.unitconversion.version>
+        <siddhi.execution.streamingml.version>2.0.4</siddhi.execution.streamingml.version>
+        <siddhi.execution.unique.version>5.0.5</siddhi.execution.unique.version>
+        <siddhi.execution.env.version>2.0.0</siddhi.execution.env.version>
 
-        <siddhi.io.file.version>2.0.17</siddhi.io.file.version>
-        <siddhi.io.tcp.version>3.0.5</siddhi.io.tcp.version>
-        <siddhi.io.jms.version>2.0.4</siddhi.io.jms.version>
-        <siddhi.io.email.version>2.0.6</siddhi.io.email.version>
-        <siddhi.io.rabbitmq.version>3.0.6</siddhi.io.rabbitmq.version>
+        <siddhi.io.file.version>2.0.18</siddhi.io.file.version>
+        <siddhi.io.tcp.version>3.0.6</siddhi.io.tcp.version>
+        <siddhi.io.jms.version>2.0.5</siddhi.io.jms.version>
+        <siddhi.io.email.version>2.0.7</siddhi.io.email.version>
+        <siddhi.io.rabbitmq.version>3.0.7</siddhi.io.rabbitmq.version>
         <siddhi.io.mqtt.version>3.0.1</siddhi.io.mqtt.version>
-        <siddhi.io.kafka.version>5.0.14</siddhi.io.kafka.version>
-        <siddhi.io.http.version>2.3.3</siddhi.io.http.version>
-        <siddhi.io.sqs.version>3.0.0</siddhi.io.sqs.version>
+        <siddhi.io.kafka.version>5.0.16-SNAPSHOT</siddhi.io.kafka.version>
+        <siddhi.io.http.version>2.3.4</siddhi.io.http.version>
+        <siddhi.io.sqs.version>3.0.1</siddhi.io.sqs.version>
         <siddhi.io.websocket.version>3.0.2</siddhi.io.websocket.version>
-        <!--<siddhi.io.ibmmq.version>2.0.0</siddhi.io.ibmmq.version>-->
         <siddhi.io.cdc.version>2.0.11</siddhi.io.cdc.version>
-        <siddhi.io.prometheus.version>2.1.2</siddhi.io.prometheus.version>
-        <siddhi.io.nats.version>2.0.11</siddhi.io.nats.version>
-        <siddhi.io.googlepubsub.version>2.0.2</siddhi.io.googlepubsub.version>
-        <siddhi.io.hl7.version>3.0.0</siddhi.io.hl7.version>
-        <siddhi.io.snmp.version>2.0.0</siddhi.io.snmp.version>
-        <siddhi.io.grpc.version>1.0.9</siddhi.io.grpc.version>
+        <siddhi.io.prometheus.version>2.1.3</siddhi.io.prometheus.version>
+        <siddhi.io.nats.version>2.0.13</siddhi.io.nats.version>
+        <siddhi.io.googlepubsub.version>2.0.3</siddhi.io.googlepubsub.version>
+        <siddhi.io.hl7.version>3.0.1</siddhi.io.hl7.version>
+        <siddhi.io.snmp.version>2.0.1</siddhi.io.snmp.version>
+        <siddhi.io.grpc.version>1.0.10</siddhi.io.grpc.version>
         <siddhi.io.gcs.version>1.0.1</siddhi.io.gcs.version>
-        <siddhi.io.s3.version>1.0.3</siddhi.io.s3.version>
+        <siddhi.io.s3.version>1.0.4</siddhi.io.s3.version>
 
-        <siddhi.map.json.version>5.2.1</siddhi.map.json.version>
-        <siddhi.map.avro.version>2.1.0</siddhi.map.avro.version>
-        <siddhi.map.binary.version>2.1.0</siddhi.map.binary.version>
-        <siddhi.map.text.version>2.1.0</siddhi.map.text.version>
-        <siddhi.map.xml.version>5.2.1</siddhi.map.xml.version>
-        <siddhi.map.keyvalue.version>2.1.1</siddhi.map.keyvalue.version>
-        <siddhi.map.csv.version>2.1.0</siddhi.map.csv.version>
+        <siddhi.map.json.version>5.2.2</siddhi.map.json.version>
+        <siddhi.map.avro.version>2.2.2-SNAPSHOT</siddhi.map.avro.version>
+        <siddhi.map.binary.version>2.1.1</siddhi.map.binary.version>
+        <siddhi.map.text.version>2.1.1</siddhi.map.text.version>
+        <siddhi.map.xml.version>5.2.2</siddhi.map.xml.version>
+        <siddhi.map.keyvalue.version>2.1.2</siddhi.map.keyvalue.version>
+        <siddhi.map.csv.version>2.1.1</siddhi.map.csv.version>
 
         <siddhi.store.mongodb.version>2.1.2</siddhi.store.mongodb.version>
         <siddhi.store.solr.version>2.0.0</siddhi.store.solr.version>
@@ -1068,7 +1084,7 @@
         <siddhi.store.hbase.version>5.0.0</siddhi.store.hbase.version>
         <siddhi.store.cassandra.version>2.0.0</siddhi.store.cassandra.version>
         <siddhi.store.redis.version>3.1.1</siddhi.store.redis.version>
-        <siddhi.store.elasticsearch.version>3.2.0</siddhi.store.elasticsearch.version>
+        <siddhi.store.elasticsearch.version>3.2.1</siddhi.store.elasticsearch.version>
 
         <siddhi.script.js.version>5.0.4</siddhi.script.js.version>
 
@@ -1076,25 +1092,24 @@
 
         <!--Integration Test Framework Versions -->
         <testng.version>6.9.10</testng.version>
-        <commons-httpclient.version>3.1.0.wso2v2</commons-httpclient.version>
+        <commons-httpclient.version>4.3.2.wso2v1</commons-httpclient.version>
         <commons.logging.version>1.2</commons.logging.version>
-        <apache.commons.version>1.3</apache.commons.version>
+        <apache.commons.version>1.3.2</apache.commons.version>
         <json.version>3.0.0.wso2v1</json.version>
         <codehaus.jackson.version>1.9.13</codehaus.jackson.version>
         <org.snakeyaml.version>1.17</org.snakeyaml.version>
         <mysql.con.version>6.0.5</mysql.con.version>
         <googlecode.json-simple.version>1.1.wso2v1</googlecode.json-simple.version>
-        <io.netty.version>4.1.34.Final</io.netty.version>
-        <log4j.version>1.2.17</log4j.version>
+        <io.netty.version>4.1.74.Final</io.netty.version>
+        <log4j.version>2.17.1</log4j.version>
         <commons-codec.wso2.version>1.3.0.wso2v1</commons-codec.wso2.version>
 
         <!--Performance Testing Versions-->
         <HdrHistogram.version>2.1.9</HdrHistogram.version>
         <jacoco.maven.version>0.7.8</jacoco.maven.version>
-        <wso2.log4j.version>1.2.17.wso2v1</wso2.log4j.version>
 
         <!-- Forget me tool -->
-        <forgetme.tool.version>1.1.21</forgetme.tool.version>
+        <forgetme.tool.version>1.4.0</forgetme.tool.version>
 
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
