--- a/modules/samples/sample-clients/http-server/build.xml
+++ b/modules/samples/sample-clients/http-server/build.xml
@@ -40,8 +40,8 @@
             <include name="org.ops4j.*.jar"/>
             <include name="siddhi-*.jar"/>
             <include name="org.wso2.carbon.si.metrics.core_*.jar"/>
-            <include name="org.ops4j.pax.logging.pax-logging-api_2.1.0.jar"/>
-            <include name="org.ops4j.pax.logging.pax-logging-log4j2_2.1.0.jar"/>
+            <include name="org.ops4j.pax.logging.pax-logging-api_*.jar"/>
+            <include name="org.ops4j.pax.logging.pax-logging-log4j2_*.jar"/>
         </fileset>
     </path>
 
