--- a/modules/samples/sample-clients/kafka-consumer/build.xml
+++ b/modules/samples/sample-clients/kafka-consumer/build.xml
@@ -41,9 +41,7 @@
         <fileset dir="${lib.dir}"/>
         <fileset dir="${carbon.home}/wso2/lib/plugins">
             <include name="org.apache.commons.logging_*.jar"/>
-            <include name="slf4j.log4j*.jar"/>
             <include name="org.ops4j.*.jar"/>
-            <include name="slf4j.api_*.jar"/>
             <include name="siddhi-*.jar"/>
             <include name="disruptor_*.jar"/>
             <include name="org.eclipse.osgi_*.jar"/>
@@ -54,6 +52,8 @@
             <include name="org.wso2.carbon.transport.http.netty_*.jar"/>
             <include name="io.netty.*.jar"/>
             <include name="commons-pool_*.jar"/>
+            <include name="pax-logging-api-*.jar" />
+            <include name="pax-logging-log4j2-*.jar" />
             <include name="org.apache.ws.commons.axiom.axiom-api_*.jar"/>
             <include name="jaxen_*.jar"/>
             <include name="org.wso2.carbon.si.metrics.core_*.jar"/>
