--- a/modules/samples/sample-clients/rabbitmq-producer/build.xml
+++ b/modules/samples/sample-clients/rabbitmq-producer/build.xml
@@ -43,9 +43,7 @@
         </fileset>
         <fileset dir="${carbon.home}/wso2/lib/plugins">
             <include name="org.apache.commons.logging_*.jar"/>
-            <include name="slf4j.log4j*.jar"/>
             <include name="org.ops4j.*.jar"/>
-            <include name="slf4j.api_*.jar"/>
             <include name="siddhi-*.jar"/>
             <include name="disruptor_*.jar"/>
             <include name="org.eclipse.osgi_*.jar"/>
@@ -55,6 +53,8 @@
             <include name="com.google.*.jar"/>
             <include name="org.apache.ws.commons.axiom.axiom-api_*.jar"/>
             <include name="jaxen_*.jar"/>
+            <include name="pax-logging-api-*.jar" />
+            <include name="pax-logging-log4j2-*.jar" />
         </fileset>
     </path>
 
