--- a/modules/samples/sample-clients/tcp-server/build.xml
+++ b/modules/samples/sample-clients/tcp-server/build.xml
@@ -38,9 +38,7 @@
             <include name="org.apache.commons.logging_*.jar"/>
             <include name="org.apache.commons.collections4*.jar"/>
             <include name="io.netty.*.jar"/>
-            <include name="slf4j.log4j*.jar"/>
             <include name="org.ops4j.*.jar"/>
-            <include name="slf4j.api_*.jar"/>
             <include name="siddhi-*.jar"/>
             <include name="disruptor_*.jar"/>
             <include name="org.eclipse.osgi_*.jar"/>
@@ -50,6 +48,8 @@
             <include name="quartz_*.jar"/>
             <include name="org.wso2.carbon.transport.http.netty_*.jar"/>
             <include name="commons-pool_*.jar"/>
+            <include name="pax-logging-api-*.jar" />
+            <include name="pax-logging-log4j2-*.jar" />
         </fileset>
     </path>
 
