--- a/modules/samples/sample-clients/websocket-receiver/build.xml
+++ b/modules/samples/sample-clients/websocket-receiver/build.xml
@@ -38,9 +38,7 @@
         </fileset>
         <fileset dir="${carbon.home}/wso2/lib/plugins">
             <include name="org.apache.commons.logging_*.jar"/>
-            <include name="slf4j.log4j*.jar"/>
             <include name="org.ops4j.*.jar"/>
-            <include name="slf4j.api_*.jar"/>
             <include name="siddhi-*.jar"/>
             <include name="disruptor_*.jar"/>
             <include name="org.eclipse.osgi_*.jar"/>
@@ -53,6 +51,8 @@
             <include name="io.netty.*.jar"/>
             <include name="org.apache.ws.commons.axiom.axiom-api_*.jar"/>
             <include name="jaxen_*.jar"/>
+            <include name="pax-logging-api-*.jar" />
+            <include name="pax-logging-log4j2-*.jar" />
         </fileset>
     </path>
 
