--- a/modules/distribution/pom.xml
+++ b/modules/distribution/pom.xml
@@ -42,6 +42,10 @@
             <artifactId>org.wso2.carbon.launcher</artifactId>
         </dependency>
         <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>failureaccess</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.wso2.carbon</groupId>
             <artifactId>org.wso2.carbon.server.feature</artifactId>
             <type>zip</type>
